     is useful if your master index somehow gets screwed.  Note
     this is not the same as actually re-indexing the distributions
     (that's a feature I might add later).

     All commands for pinto-admin[1] now support a --man option,
     which shows you the full documentation for a commmand.  But
     at this point, I haven't written the documentation for all
     the commands.
    

0.019     2011-08-24 04:09:41 America/Los_Angeles

     * Bug Fixes:

     The 'add' and 'remove' commands for pinto-admin were not reading
     arguments from STDIN properly.

     All svn commands would fail when running under pinto-server.
     This was due to some strage behavior in IPC::Run that I can't
     explain.

0.018     2011-08-24 01:45:21 America/Los_Angeles

     Now using IPC::Run to handle external commands (like svn).
     IPC::Run seems to behave better when running in a server
     environment like pinto-server (via Dancer).

0.017     2011-08-24 00:50:09 America/Los_Angeles

    * Interface Changes:

    pinto-admin[1] is now zero-conf (at least, by default).  However,
    you must now specify the --repos for every command.  Also, some of
    the options for pinto-admin have been removed for safety, and are
    now in the repository-specific configuration file (see below).
    This helps to deter you from doing things that contradict the
    usual behavior of your repository.

    Each Pinto repository now has its own configuration file, which
    governs its basic behavior.  The configuration file is generated
    with default values when you run the "create" command.  This
    allows you set up multiple repositories, each with a different
    behavior and VCS store.

    * Enhancements:

    The "add" and "remove" commands for pinto-admin[1] can now read
    arguments from STDIN.  When doing so, it filters out things that
    look like comments and blank lines.  This makes it easy to pipe in
    the output from a find[1] or dzil[1] command.
