@@ -20,7 +20,11 @@ sub opt_spec {
 
     return ( $self->SUPER::opt_spec(),
 
-        [ 'noinit'  => 'Do not pull/update from VCS' ],
+        [ 'message=s' => 'Prepend a message to the VCS log' ],
+        [ 'nocommit'  => 'Do not commit changes to VCS' ],
+        [ 'noinit'    => 'Do not pull/update from VCS' ],
+        [ 'notag'     => 'Do not create any tag in VCS' ],
+        [ 'tag=s'     => 'Specify an alternate tag name' ],
     );
 }
 
