@@ -26,22 +26,6 @@ with qw( Pinto::Role::PathMaker );
 #------------------------------------------------------------------------------
 # Methods
 
-=method is_initialized()
-
-Returns true if the store appears to be initialized.  In this base
-class, it simply means that the working directory exists.  For other
-derived classes, this could mean that the working copy is up-to-date.
-
-=cut
-
-sub is_initialized {
-    my ($self) = @_;
-
-    return -e $self->config->repos();
-}
-
-#------------------------------------------------------------------------------
-
 =method initialize()
 
 This method is called before each batch of Pinto events, and is
@@ -57,6 +41,7 @@ to this Store.
 sub initialize {
     my ($self) = @_;
 
+    $self->logger->debug('Initializing the store');
     my $repos = $self->config->repos();
     $self->mkpath($repos);
 
@@ -65,27 +50,41 @@ sub initialize {
 
 #------------------------------------------------------------------------------
 
-=method finalize(message => 'what happened')
+=method commit(message => 'what happened')
 
 This method is called after each batch of Pinto events and is
 responsible for doing any work that is required to commit the Store.
 This could include scheduling files for addition/deletion, pushing
-commits to a remote repository, and/or making a tag.  If the
-finalization fails, an exception should be thrown.  The default
-implementation merely logs the message.  Returns a reference
-to this Store.
+commits to a remote repository.  If the commit fails, an exception
+should be thrown.  The default implementation merely logs the message.
+Returns a reference to this Store.
 
 =cut
 
-sub finalize {
+sub commit {
     my ($self, %args) = @_;
 
-    my $message = $args{message} || 'Finalizing the store';
+    my $message = $args{message} || 'Committing the store';
     $self->logger->debug($message);
 
     return $self;
 }
 
+#------------------------------------------------------------------------------
+
+=method tag( tag => $tag_name )
+
+Tags the store.  For some subclasses, this means performing some kind
+of "tag" operations.  For others, it could mean doing a copy
+operation.  The default implementation does nothing.
+
+=cut
+
+sub tag {
+    my ($self, %args) = @_;
+
+    return $self;
+}
 
 #------------------------------------------------------------------------------
 
